// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator block Save render should match snapshot 1`] = `
<div
  aria-hidden="true"
  class="wp-block-ugb-separator alignfull ugb-separator ugb-separator--design-wave-1"
>
  <div
    class="ugb-separator__top-pad"
  />
  <div
    class="ugb-separator__svg-wrapper"
  >
    <div
      class="ugb-separator__svg-inner"
    >
      <svg
        class="ugb-separator__layer-1"
        preserveAspectRatio="none"
      />
    </div>
  </div>
  <div
    class="ugb-separator__bottom-pad"
  />
</div>
`;

exports[`Separator block Save render should match snapshot with attributes 1`] = `
<div
  aria-hidden="true"
  class="wp-block-ugb-separator alignfull ugb-separator ugb-separator--design-wave-2 ugb-separator--flip-vertical ugb-separator--flip-horizontal"
>
  <div
    class="ugb-separator__top-pad"
  />
  <div
    class="ugb-separator__svg-wrapper"
  >
    <div
      class="ugb-separator__svg-inner"
    >
      <svg
        class="ugb-separator__shadow"
        preserveAspectRatio="none"
      />
      <svg
        class="ugb-separator__layer-1"
        preserveAspectRatio="none"
      />
    </div>
  </div>
  <div
    class="ugb-separator__bottom-pad"
  />
</div>
`;
